# formula-e-race-engineer

./: .gitignore  BONUS.md  DEMO.md  FILE_INDEX.md  HOW_IT_WORKS.md  PACKAGING.md  PROGRESS.md  README.md  RUN_OF_SHOW.md  SMOKE_TEST.md  STUDENT_GUIDE.md  activate.sh  demo.sh  p27_patch.py  pyproject.toml  qa_rotate_patch.py  requirements.txt
agent/race_engineer/: __init__.py  agent.py  config.py  prompts.py  snapshot.py
deploy/: .engine_resource  build_engine_app.py  deploy_agent_engine.sh  deploy_frontend.sh  deploy_state_writer.sh  deploy_toolbox.sh  enable_apis.sh  setup_firestore.sh
docs/: PACKAGING_BRIEF.md
frontend/: Dockerfile  agent_client.py  engineer_loop.py  main.py  requirements.txt  stt.py  tts.py
frontend/static/: index.html
notebooks/: bq_setup.py
scripts/: agent_chat.py  engine_smoke.py  env_check.sh  local_test.py  qa_latency_probe.py  reset_race_state.py  seed_test_state.py  stage_probe.py  test_frame_tools.py  toolbox_test.py
setup/: 1_enable_apis.sh  2_load_bigquery.sh  3_deploy_toolbox.sh  4_setup_firestore.sh  5_deploy_state_writer.sh  6_deploy_simulator.sh  7_deploy_cloud.sh  _lib.sh  all.sh  verify.sh  verify_checks.py
shared/: __init__.py  agent_pkg.py  models.py  scorer.py  script_env.py
simulator/: .dockerignore  Dockerfile  README.md  deploy.sh  requirements.txt
simulator/notebooks/: build_frames.ipynb
simulator/src/: config.py  frame_loader.py  main.py  publisher.py  replay_clock.py
solution/race_engineer/: __init__.py  agent.py  (+2 more)
state_writer/: Dockerfile  main.py  requirements.txt
toolbox/: .gitignore  tools.yaml
(+14 files in other folders)
